--- a/_sass/modules/modal.scss
+++ b/_sass/modules/modal.scss
@@ -104,10 +104,15 @@
 	height: 4rem;
 	font-size: 4rem;
 	color: white;
-	opacity: 0.5;
+	opacity: 0;
 	@include prefix(transition, opacity 0.25s);
-	&:hover {
-		opacity: 1;
+	.is-open & {
+		opacity: 0.5;
+		@include prefix(transition, opacity 1s 0.25s);
+		&:hover {
+			opacity: 1;
+			@include prefix(transition, opacity 0.25s);
+		}
 	}
 	&:active {
 		top: 1rem;
@@ -115,7 +120,6 @@
 	}
 	.is-success & {
 		opacity: 0;
-		@include prefix(transition, opacity 1s);
 	}
 }
 
